# tp-cpp-course

./: .gitlab-ci.yml  CMakeLists.txt  README.md  cppcheck.sh
hw-1/inc/: grouping.h  retcodes.h
hw-1/src/: grouping.c
inc/: args.h  data.h  default_worker.h  grouping.h  input.h  packing.h  read_data.h  read_write.h  retcodes.h  table_utils.h
lib/: worker.h
lib/linear/inc/: default_worker.h  retcodes.h
lib/linear/src/: default_worker.c
lib/parallel/inc/: parallel_worker.h
lib/parallel/src/: parallel_worker.c
src/: args.c  data.c  default_worker.c  grouping.c  input.c  main.c  packing.c  read_data.c  read_write.c  table_utils.c
unit_tests/: args_tests.cpp  datalib_tests.cpp  fixtures_tests.cpp  fixtures_tests.hpp  tests.cpp  tests_fill_create.cpp  tests_group.cpp
unit_tests/default/: default_worker.cpp
unit_tests/parallel/: parallel_worker.cpp
utils/: generate.py  stress_tests.sh
